feat : sprint7 basecode 적용